<resources>
    <string name="app_name">MedManager</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="key_dark_theme">dark_theme</string>
    <string name="title_dark_theme">Dark Theme</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Don\'t have an account? Sign up here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_error">Please enter a valid email</string>
    <string name="password_error"> Please enter a valid password</string>
    <string name="home_nav"> Home </string>
    <string name="overview_nav"> Overview</string>
    <string name="search_nav"> Search</string>
    <string name="profile_nav"> Profile </string>
    <string name="field_error"> Please fill the fields</string>
    <string name="medication_added"> New Medication Added</string>
    <string name="generic_error_message"> Oops! Something went wrong</string>
    <string name="drug_name">Name of Drug</string>
    <string name="drug_details">Details (if any)</string>
    <string name="drug_time">Time to be taken</string>
    <string name="drug_date">Date to be taken</string>
    <string name="drug_time_end">Time to end</string>
    <string name="drug_date_end">Date to end</string>
    <string name="add_med">Add Medication</string>
    <string name="no_meds"> You don\'t have any meds</string>
    <string name="reset">Reset</string>
    <string name="time_has_passed">Oops! The time is in the past</string>
    <string name="title_activity_demo">DemoActivity</string>
    <string name="category_nav">Category</string>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
