<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/event_styling"
        android:hint="@string/drug_name"
        android:padding="8dp"
        android:maxLines="1"
        android:id="@+id/med_name_edit" />

    <EditText
        style="@style/event_styling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="20dp"
        android:hint="@string/drug_details"
        android:padding="20dp"
        android:id="@+id/med_note_edit"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/event_styling">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drug_date"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/med_date"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/event_styling">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drug_time"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/med_time"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/event_styling">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drug_date_end"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/med_date_end"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/event_styling">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/drug_time_end"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="25dp"
            android:layout_marginEnd="25dp"
            android:id="@+id/med_end_time"/>

    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        style="@style/event_styling"
        android:id="@+id/med_add"
        android:text="@string/add_med"
        android:textColor="@android:color/white"/>

</LinearLayout>