<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/search_name_edit_text"
        android:hint="@string/drug_name"
        style="@style/event_styling"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/search_nav"
            android:textColor="@android:color/white"
            android:layout_marginLeft="4dp"
            android:id="@+id/search_button"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_layout"
        android:orientation="vertical"
        android:layout_marginTop="6dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:id="@+id/reset_search"
            android:text="@string/reset"/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/search_recycler_view"
        android:layout_marginTop="6dp"/>
    </LinearLayout>
</LinearLayout>