<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_mail_black_24dp"
            android:drawableStart="@drawable/ic_mail_black_24dp"
            android:shadowColor="@android:color/white"
            android:drawablePadding="4dp"
            android:hint="@string/email"
            android:id="@+id/email_et"
            android:inputType="textEmailAddress"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_lock_24dp"
            android:drawableStart="@drawable/ic_lock_24dp"
            android:shadowColor="@android:color/white"
            android:drawablePadding="4dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="6dp"
            android:id="@+id/password_et"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sign_up_in_btn"
            android:padding="14dp"
            android:background="@color/colorPrimary"
            android:layout_marginTop="6dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/sign_in"
                android:textColor="@android:color/white"
                android:id="@+id/btn_text_sign"/>
        </LinearLayout>

    </LinearLayout>






</RelativeLayout>